Better error handling done in worklog import and text overflow issue resolved in Calendar

--- a/src/gadgets/Calendar/Calendar.scss
+++ b/src/gadgets/Calendar/Calendar.scss
@@ -47,6 +47,7 @@
 .ui-widget .fc-event .fc-content {
   color: #fff !important;
   text-decoration: none;
+  overflow: hidden;
 }
 
 .fc-time-grid-event .fc-time,
